--- a/main.html
+++ b/main.html
@@ -10,7 +10,20 @@
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
-
+<table border="1">
+	<tr>
+		<th>Roll Number</th>
+		<th>Name</th>
+	</tr>
+	<tr>
+		<td>1</td>
+		<td>Keshav</td>
+	</tr>
+	<tr>
+		<td>2</td>
+		<td>Rajesh</td>
+	</tr>
+</table>
 </body>
 
 </html>
