--- a/main.html
+++ b/main.html
@@ -11,10 +11,13 @@
     <script type="text/javascript" src="./script.js">
 </script>
 <table border="1">
+	<thead>
 	<tr>
 		<th>Roll Number</th>
 		<th>Name</th>
 	</tr>
+	</thead>
+	<tbody>
 	<tr>
 		<td>1</td>
 		<td>Keshav</td>
@@ -23,6 +26,7 @@
 		<td>2</td>
 		<td>Rajesh</td>
 	</tr>
+	</tbody>
 </table>
 </body>
 
